Avoid overflow on card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -445,6 +445,7 @@ nav li a:hover {
     box-shadow: var(--shadow);
     background-color: white;
     width: 100%;
+    overflow: hidden;
 }
 
 /* Image
